--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "version": "8.5.2",
-  "name": "cordova-plugin-googleplus",
+  "version": "8.5.2-b",
+  "name": "@s2a/cordova-plugin-googleplus",
   "cordova_name": "Google SignIn",
   "description": "Use your Google account to authenticate with the app.",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/EddyVerbruggen/cordova-plugin-googleplus.git"
+    "url": "https://github.com/s2a-io/cordova-plugin-googleplus.git"
   },
   "bugs": {
-    "url": "https://github.com/EddyVerbruggen/cordova-plugin-googleplus/issues"
+    "url": "https://github.com/s2a-io/cordova-plugin-googleplus/issues"
   },
-  "homepage": "https://github.com/EddyVerbruggen/cordova-plugin-googleplus#readme",
+  "homepage": "https://github.com/s2a-io/cordova-plugin-googleplus#readme",
   "keywords": [
     "Google",
     "Google SignIn",
